--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,26 @@
-body {
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  /* font-family: ; */
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+div {
+  border: 2px solid black;
 }
+
+#div1 {
+  color: red;
+}
+#div2 {
+  color: orange;
+}
+#div3 {
+  color: rgb(244, 227, 42);
+}
+#div4 {
+  color: green;
+}
+#div5 {
+  color: blue;
+}
+
